# OpenAI_GPT-OSS_Hackathon

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION_NOTES.md  README.md  demo.sh  docker-compose.yml  env.example
api/: Dockerfile  pyproject.toml
api/src/: main.py
api/src/core/: config.py  db.py  schemas.py
api/src/data/solutions/: two_sum_12345.json
api/src/routers/: chat.py  feedback.py  problems.py  solutions.py  submit.py
api/src/services/: feedback.py  gpt_coach.py  gpt_coach_clean.py  judge.py  solutions_store.py
api/src/services/problem_gen/: __init__.py  arrays_strings.py  binary_tree_bst.py  hashmap_set.py  linked_list.py  registry.py  stack_queue.py  utils.py
api/src/tests/: test_smoke_vllm.py
api/tests/: test_problem_gen.py  test_submit.py
cuda_accel/: CMakeLists.txt  Dockerfile  requirements.txt  server.py
cuda_accel/include/: kernels.h
cuda_accel/src/: bindings.cpp  kernels.cu
cuda_accel/tests/: __init__.py  test_cuda_gen.py
db/: init.sql
infra/: .clang-format  .editorconfig  pre-commit-config.yaml
runner/: Dockerfile  requirements.txt  run_server.py
scripts/: run_local_gpu.sh
web/: Dockerfile  next.config.js  package-lock.json  package.json
web/.next/: trace
web/.next/cache/: config.json
web/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChatCoach.tsx  Editor.tsx  LockNotice.tsx  ProblemCard.tsx  ProblemHeader.tsx  ResultsTable.tsx  RunResults.tsx
web/src/lib/: api.ts  state.ts
(+46 files in other folders)
